--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -457,4 +457,13 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     Foam
 )
 
+if(builtin_vdt)
+#  target_link_libraries(RooFitCore PUBLIC $<INSTALL_INTERFACE:vdt>)
+  target_include_directories(RooFitCore PUBLIC $<INSTALL_INTERFACE:include>)
+elseif(vdt)
+#  target_link_libraries(RooFitCore PUBLIC ${VDT_LIBRARIES})
+  target_include_directories(RooFitCore PUBLIC ${VDT_INCLUDE_DIRS})
+endif()
+
+
 ROOT_ADD_TEST_SUBDIRECTORY(test)
