Change batch evaluation interface.
- Add a RooArgSet to the batch interface that holds variables found in the dataset.
- Using the new BatchHelpers, PDFs can now search for their proxies in the dataset.
- Implement batched/vectorised computations for Gauss and Poisson.

--- a/roofit/roofit/CMakeLists.txt
+++ b/roofit/roofit/CMakeLists.txt
@@ -132,6 +132,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFit
     src/RooUnblindUniform.cxx
     src/RooUniform.cxx
     src/RooVoigtian.cxx
+    src/BatchHelpers.cxx
   DICTIONARY_OPTIONS
     "-writeEmptyRootPCM"
   LINKDEF
